	<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    	
 <item
        android:id="@+id/moreinfo1"
        android:showAsAction="always"
        android:icon="@drawable/moreinfo_default"
        android:title="@string/more_info" >
        <menu>
        <item
        android:id="@+id/member_info1"
        android:showAsAction="always"
        android:title="@string/Member_info"/>
        <item
        android:id="@+id/store1"
        android:showAsAction="always"
        android:title="@string/store"/>
    	<item
        android:id="@+id/join_us1"
        android:showAsAction="always"
        android:title="@string/join_us" />
    	<item
        android:id="@+id/about1"
        android:showAsAction="always"
        android:title="@string/About"/>

    	    	
    	</menu>
    </item>


</menu>